<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flox</string>
    <string name="row_continue">CONTINUE WATCHING</string>
    <string name="row_library">LIBRARY</string>
    <string name="state_connect_telegram">CONNECT TELEGRAM</string>
    <string name="row_trending_movies">TRENDING MOVIES</string>
    <string name="row_trending_tv">TRENDING TV</string>
    <string name="state_loading">LOADING</string>
    <string name="state_empty">NO RESULTS</string>
    <string name="state_error">REQUEST FAILED</string>
    <string name="state_library_empty">NOTHING UPLOADED YET</string>
    <string name="state_playback_failed">PLAYBACK FAILED</string>
    <string name="search">SEARCH</string>
    <string name="search_hint">Title</string>
    <string name="play">PLAY</string>
    <string name="resume">RESUME</string>
    <string name="play_hub">4KHDHUB</string>
    <string name="type_movie">MOVIE</string>
    <string name="type_tv">TV</string>
    <string name="season_fmt">S%1$d</string>
    <string name="episode_fmt">E%1$d</string>
    <string name="player_focus_hint">PLAYER CONTROLS · BACK TO EXIT</string>
    <string name="player_nav_hint">NAVIGATE · CENTER SELECT · BACK EXIT</string>
    <string name="player_reloading">RELOADING PLAYER</string>
    <string name="player_subtitles_on">SUBTITLES · %1$s</string>
    <string name="player_subtitles_off">SUBTITLES OFF</string>
    <string name="player_next_episode">NEXT · S%1$d E%2$d</string>
    <string name="player_episode_finished">EPISODE FINISHED</string>
    <string name="player_episode_stamp">S%1$d · E%2$d</string>
    <string name="player_seek_fmt">%1$s%2$d S</string>
    <string name="player_back">Back</string>
    <string name="player_rewind">Rewind</string>
    <string name="player_forward">Forward</string>
    <string name="player_play_pause">Play or pause</string>
    <string name="player_subtitles">Subtitles</string>
    <string name="player_quality">Quality</string>
    <string name="player_audio">Audio track</string>
    <string name="player_audio_heading">AUDIO</string>
    <string name="player_audio_fmt">AUDIO · %1$s</string>
    <string name="player_audio_track_fmt">Track %1$d</string>
    <string name="player_quality_heading">QUALITY</string>
    <string name="player_hub_searching">FINDING ON 4KHDHUB</string>
    <string name="player_hub_unavailable">NOT ON 4KHDHUB · USING DEFAULT SOURCE</string>
    <string name="player_quality_fmt">QUALITY · %1$s</string>
    <string name="player_next">Next episode</string>
    <string name="player_volume_down">Volume down</string>
    <string name="player_volume_up">Volume up</string>
    <string name="player_volume_fmt">VOLUME · %1$d / %2$d</string>
    <string name="player_volume_pct_fmt">VOLUME · %1$d%%</string>
    <string name="player_resume_fmt">Resume from %1$s</string>
    <string name="player_start_over">Start over</string>
    <string name="telegram_eyebrow">TELEGRAM</string>
    <string name="telegram_title">Connect your library</string>
    <string name="telegram_scan">SCAN WITH THE TELEGRAM APP · SETTINGS · DEVICES · LINK DESKTOP DEVICE</string>
    <string name="telegram_password">TWO-STEP PASSWORD</string>
    <string name="telegram_password_hint">Password</string>
    <string name="telegram_submit">CONTINUE</string>
    <string name="telegram_not_configured">TELEGRAM_API_ID AND TELEGRAM_API_HASH MISSING FROM LOCAL.PROPERTIES</string>
    <string name="webview_old">SYSTEM WEBVIEW IS OUTDATED · PLAYBACK MAY FAIL</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_eyebrow">FLOX</string>
    <string name="settings_title">Settings</string>
    <string name="settings_hint">CENTER CHANGE · LEFT RIGHT CYCLE · BACK EXIT</string>
    <string name="settings_section_playback">PLAYBACK</string>
    <string name="settings_section_audio">AUDIO</string>
    <string name="settings_section_interface">INTERFACE</string>
    <string name="settings_section_library">LIBRARY</string>
    <string name="settings_section_about">ABOUT</string>
    <string name="settings_quality">Default quality</string>
    <string name="settings_audio_language">Preferred audio language</string>
    <string name="settings_subtitles">Subtitles by default</string>
    <string name="settings_subtitle_language">Subtitle language</string>
    <string name="settings_subtitle_size">Subtitle size</string>
    <string name="settings_speed">Playback speed</string>
    <string name="settings_aspect">Aspect mode</string>
    <string name="settings_autoplay">Autoplay next episode</string>
    <string name="settings_seek_step">Seek step</string>
    <string name="settings_resume">Resume mode</string>
    <string name="settings_finished">Mark finished at</string>
    <string name="settings_loudness">Loudness boost</string>
    <string name="settings_loudness_gain">Loudness gain</string>
    <string name="settings_overlay_hide">Hide player controls after</string>
    <string name="settings_sort">Sort order</string>
    <string name="settings_channel">Telegram channel</string>
    <string name="settings_channel_hint">Channel name</string>
    <string name="settings_continue_limit">Continue watching limit</string>
    <string name="settings_clear_history">Clear watch history</string>
    <string name="settings_clear_history_confirm">Remove every title from continue watching and forget saved positions?</string>
    <string name="settings_cleared">CLEARED</string>
    <string name="settings_sign_out">Sign out of Telegram</string>
    <string name="settings_sign_out_confirm">Sign out of Telegram on this device? The library will be hidden until you connect again.</string>
    <string name="settings_connect">Connect Telegram</string>
    <string name="settings_signed_in">SIGNED IN</string>
    <string name="settings_signed_out">SIGNED OUT</string>
    <string name="settings_version">Version</string>
    <string name="settings_update">Check for updates</string>
    <string name="settings_update_check">CHECK</string>
    <string name="settings_update_checking">CHECKING</string>
    <string name="settings_update_latest">UP TO DATE</string>
    <string name="settings_update_available">%1$s AVAILABLE</string>
    <string name="settings_update_downloading">DOWNLOADING %1$d%%</string>
    <string name="settings_update_installing">INSTALLING</string>
    <string name="settings_update_failed">FAILED · %1$s</string>
    <string name="settings_update_title">Update to %1$s</string>
    <string name="settings_update_install">INSTALL</string>
    <string name="settings_update_size">Download size %1$d MB.</string>
    <string name="settings_on">ON</string>
    <string name="settings_off">OFF</string>
    <string name="settings_highest">HIGHEST</string>
    <string name="settings_any">ANY</string>
    <string name="settings_device_language">DEVICE LANGUAGE</string>
    <string name="settings_seconds_fmt">%1$d S</string>
    <string name="settings_percent_fmt">%1$d%%</string>
    <string name="settings_db_fmt">+%1$d DB</string>
    <string name="settings_speed_fmt">%1$s×</string>
    <string name="settings_size_small">SMALL</string>
    <string name="settings_size_normal">NORMAL</string>
    <string name="settings_size_large">LARGE</string>
    <string name="settings_resume_always">ALWAYS</string>
    <string name="settings_resume_ask">ASK</string>
    <string name="settings_resume_never">NEVER</string>
    <string name="settings_aspect_fit">FIT</string>
    <string name="settings_aspect_fill">FILL</string>
    <string name="settings_aspect_zoom">ZOOM</string>
    <string name="settings_sort_title">TITLE</string>
    <string name="settings_sort_date">DATE ADDED</string>
    <string name="settings_sort_size">SIZE</string>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">CANCEL</string>
</resources>
